# descargador-de-archivos-bakend-fronted-y-todos-los-archivos

./: .coverage  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt  tripero.py
docker/: Dockerfile.go  Dockerfile.java  Dockerfile.nodejs  Dockerfile.python
src/cpp/: CMakeLists.txt  file_downloader.cpp  file_downloader.hpp  main.cpp
src/go/: filedownloader.go  go.mod
src/java/: FileDownloader.java  Main.java
src/javascript/: fileDownloader.js  main.js  package.json
tests/: test_tripero.py
